# sandbox

./: .gitmodules  CMakeLists.txt  README.md  Sandbox.sln  configure.sh
.cache/clangd/index/: Block.cpp.AE740F2B2760B193.idx  Block.h.A7D38D7004E29BF8.idx  BlockType.cpp.9F0F19C96141CECD.idx  BlockType.h.62D0AF56F6535830.idx  BlocksContainer.h.B5E532A42C31BF1C.idx  Camera.cpp.DA6416077B6E041F.idx  Camera.h.1EC06CFDCDE4CB78.idx  Chunk.cpp.621A785CFBB5C268.idx  Chunk.h.C44F4FF90D436823.idx  ChunkCoord.h.7EE555A5F1CE3A8E.idx  Definitions.h.1A1CC4C1A87818BC.idx  Game.cpp.9B05DFDEBB7985D3.idx  Game.h.5EC772978C1C7B54.idx  (+278 more)
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox Launcher/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Sandbox Launcher.csproj  packages.config
Sandbox Launcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Sandbox/src/: Block.cpp  Block.h  BlockType.cpp  BlockType.h  BlocksContainer.cpp  BlocksContainer.h  BlocksDataBase.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkCoord.h  Definitions.h  Game.cpp  Game.h  Main.cpp  Main.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Structures.h  Transform.cpp  Transform.h  World.cpp  World.h
bin-int/Debug-Win32/: Sandbox.exe.recipe  vc142.idb
bin-int/Release-Win32/: Sandbox.exe.recipe
src/: Block.cpp  BlockType.cpp  CMakeLists.txt  Chunk.h  Game.cpp  Game.h  Main.cpp  Player.h  Structures.h  World.cpp  World.h
src/core/: ChunkCoord.h  Input.cpp  Libs.h  Math.h
src/core/render/: Camera.cpp  Mesh.h  Shader.h  Texture.cpp  Texture.h
(+69 files in other folders)
